Update usecase 2