@@ -72,22 +72,22 @@ public class AssemblyLineController {
     HashMap<String, List<String>> output = new LinkedHashMap<>();
 
     for (String key : workPostPairs.keySet()) {
-      List<AssemblyTask> values = workPostPairs.get(key);
-      List<String> valuesString = values.stream().map(AssemblyTask::getName).collect(Collectors.toList());
+      List<AssemblyTask> assemblyTasks = workPostPairs.get(key);
+      List<String> assemblyTasksNames = new ArrayList<>(assemblyTasks.stream().map(AssemblyTask::getName).toList());
 
-      for (int i = 0; i < valuesString.size(); i++) {
-        if (assemblyLineStatus.get(key) == values.get(i)) {
-          String newValue = valuesString.get(i) + " (active)";
-          valuesString.set(i, newValue);
+      for (int i = 0; i < assemblyTasksNames.size(); i++) {
+        if (assemblyLineStatus.get(key) == assemblyTasks.get(i)) {
+          String assemblyTaskName = assemblyTasksNames.get(i) + " (active)";
+          assemblyTasksNames.set(i, assemblyTaskName);
         }
 
-        if (values.get(i).getPending()) {
-          String newValue = valuesString.get(i) + " (pending)";
-          valuesString.set(i, newValue);
+        if (assemblyTasks.get(i).getPending()) {
+          String assemblyTaskName = assemblyTasksNames.get(i) + " (pending)";
+          assemblyTasksNames.set(i, assemblyTaskName);
         }
       }
 
-      output.put(key, valuesString);
+      output.put(key, assemblyTasksNames);
     }
 
     return output;
